Updated website design

--- a/contact.html
+++ b/contact.html
@@ -51,15 +51,17 @@
 
         <!-- Begin page content -->
         <div class="container">
-            <div class="page-header page-header-border">
-                <h1>Interested in learning more about me? Contact me:</h1>
+            <div class="page-header page-header-border titleContainer">
+                <h1 class="pageTitle">Contact me</h1>
             </div>
-            <p class="lead center">Contact me through email or LinkedIn, or check out my projects on GitHub</p>
-            <br>
-            <div class="row center">
-                <div class="col-md-4"><a href="mailto:mmmoussa@uwaterloo.ca"><i class="fa fa-envelope fa-5x"></i></a></div>
-                <div class="col-md-4"><a href="https://ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/"><i class="fa fa-linkedin-square fa-5x"></i></a></div>
-                <div class="col-md-4"><a href="https://github.com/mmmoussa"><i class="fa fa-github fa-5x"></i></a></div>
+            <div class="Group">
+                <p class="lead center">Interested in learning more about me? Contact me through email or LinkedIn, or check out my projects on GitHub.</p>
+                <br>
+                <div class="row center">
+                    <div class="col-xs-4"><a href="mailto:mmmoussa@uwaterloo.ca"><i class="fa fa-envelope fa-5x"></i></a></div>
+                    <div class="col-xs-4"><a href="https://ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/"><i class="fa fa-linkedin-square fa-5x"></i></a></div>
+                    <div class="col-xs-4"><a href="https://github.com/mmmoussa"><i class="fa fa-github fa-5x"></i></a></div>
+                </div>
             </div>
         </div>
 
