--- a/index.html
+++ b/index.html
@@ -48,23 +48,25 @@
 
         <!-- Begin page content -->
         <div class="container">
-            <div class="page-header page-header-border">
-                <h1>About me</h1>
+            <div class="page-header page-header-border titleContainer">
+                <h1 class="pageTitle">About me</h1>
             </div>
-            <div class="row">
-                <div class="col-md-8">
-                    <p class="lead">Mohamed Moussa, 1A Systems Design Engineering Student</p>
-                    <div class="text">I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
-                        myself to self-improvement and am constantly looking for new and challenging problems. My passions are technology and software 
-                        development, and I am frequently learning new languages or working on side projects. I also make sure to make time for athletics 
-                        and having fun. Until recently, I was a national-level springboard and platform diver, twice placing among the top 12 in the 
-                        national finals. When not in class or studying I can often be found participating in hackathons and business events. <br><br>
-                        To learn more about me, check out my <a href="Resume.pdf">resume</a>.
+            <div class="aboutGroup">
+                <div class="row">
+                    <div class="col-md-9">
+                        <p class="lead">Mohamed Moussa, 1A Systems Design Engineering Student</p>
+                        <div class="text">I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
+                            myself to self-improvement and am constantly looking for new and challenging problems. My passions are technology and software 
+                            development, and I am frequently learning new languages or working on side projects. I also make sure to make time for athletics 
+                            and having fun. Until recently, I was a national-level springboard and platform diver, twice placing among the top 12 in the 
+                            national finals. When not in class or studying I can often be found participating in hackathons and business events. <br><br>
+                            To learn more about me, check out my <a href="Resume.pdf">resume</a>.
+                        </div>
                     </div>
-                    <br>
-                </div>
-                <div class="col-md-4">
-                    <img src="profile.png" alt="My picture" class="profile-pic"/>
+                    <div class="col-md-3">
+                        <br class="text"><br class="text">
+                        <img src="profile.png" alt="My picture" class="profile-pic"/>
+                    </div>
                 </div>
             </div>
         </div>
