--- a/projects.html
+++ b/projects.html
@@ -48,59 +48,69 @@
 
         <!-- Begin page content -->
         <div class="container">
-            <div class="page-header page-header-border">
-                <h1>My projects</h1>
+            <div class="page-header page-header-border titleContainer">
+                <h1 class="pageTitle">My projects</h1>
             </div>
-            <p class="lead">Terminal TicTacToe</p>
-            <ul>
-                <li class="text">I built the game TicTacToe to be played in the terminal</li>
-                <li class="text">The game can be played against a friend or a computer</li>
-                <li class="text">The game keeps track of each player's score as well as the ties, and switches the turn order each round to keep things fair</li>
-                <li class="text">Download the game for Mac <a href="Terminal TicTacToe.zip">here</a></li>
-                <li class="text">Download the game for Windows <a href="W_Terminal.exe">here</a></li>
-                <li class="text">Check out the code <a href="https://github.com/mmmoussa/TicTacToe">here</a></li>
-            </ul>
-            <br>
-            <p class="lead">24 Hour Startup 2014</p>
-            <div class="row">
-                <div class="col-md-10">
-                    <ul>
-                        <li class="text">Started the start-up company Citivate along with 5 other team members</li>
-                        <li class="text">The team built a website and mobile application</li>
-                        <li class="text">I worked on building the website using Bootstrap and MongoDB</li>
-                        <li class="text">Won the award for the best use of the City of Kitchener's open data</li>
-                        <li class="text">Check out the code we wrote <a href="https://github.com/mmmoussa/Citivate_backend">here</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-2">
-                    <img src="logo.png" alt="Citivate logo" class="logo-pic"/>
-                </div>
+            <div class="projectGroup">
+                <p class="lead">Terminal TicTacToe</p>
+                <ul>
+                    <li class="text">I built the game TicTacToe to be played in the terminal</li>
+                    <li class="text">The game can be played against a friend or a computer</li>
+                    <li class="text">The game keeps track of each player's score as well as the ties, and switches the turn order each round to keep things fair</li>
+                    <li class="text">Download the game for Mac <a href="Terminal TicTacToe.zip">here</a></li>
+                    <li class="text">Download the game for Windows <a href="W_Terminal.exe">here</a></li>
+                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/TicTacToe">here</a></li>
+                </ul>
             </div>
             <br>
-            <p class="lead">Waterloo EngHack Fall 2014</p>
-            <ul>
-                <li class="text">My team built a Waterloo-themed version of Temple Run for PC using JavaScript</li>
-                <li class="text">Integrated the Myo armband with the game using a Lua script for full non-contact gameplay</li>
-                <li class="text">Won second place</li>
-                <li class="text">Check out the game <a href="http://www.jhudson.ca/enghack_1/">here</a> (wait a minute for the game to load past the Windows screen of death)</li>
-                <li class="text">Check out the Myo scripts <a href="https://github.com/mmmoussa/Lua-scripts">here</a></li>
-            </ul>
+            <div class="projectGroup">
+                <p class="lead">24 Hour Startup 2014</p>
+                <div class="row">
+                    <div class="col-md-10">
+                        <ul>
+                            <li class="text">Started the start-up company Citivate along with 5 other team members</li>
+                            <li class="text">The team built a website and mobile application</li>
+                            <li class="text">I worked on building the website using Bootstrap and MongoDB</li>
+                            <li class="text">Won the award for the best use of the City of Kitchener's open data</li>
+                            <li class="text">Check out the code we wrote <a href="https://github.com/mmmoussa/Citivate_backend">here</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <img src="logo.png" alt="Citivate logo" class="logo-pic"/>
+                    </div>
+                </div>
+            </div>
             <br>
-            <p class="lead">Math Tester</p>
-            <ul>
-                <li class="text">Built a math quiz console application using C++</li>
-                <li class="text">The quiz keeps track of progress during a session</li>
-                <li class="text">Features include different difficulty levels as well as quizzes for addition, subtraction, multiplication, and division</li>
-                <li class="text">Check out the application <a href="https://github.com/mmmoussa/Math-Tester">here</a></li>
-            </ul>
+            <div class="projectGroup">
+                <p class="lead">Waterloo EngHack Fall 2014</p>
+                <ul>
+                    <li class="text">My team built a Waterloo-themed version of Temple Run for PC using JavaScript</li>
+                    <li class="text">Integrated the Myo armband with the game using a Lua script for full non-contact gameplay</li>
+                    <li class="text">Won second place</li>
+                    <li class="text">Check out the game <a href="http://www.jhudson.ca/enghack_1/">here</a> (wait a minute for the game to load past the Windows screen of death)</li>
+                    <li class="text">Check out the Myo scripts <a href="https://github.com/mmmoussa/Lua-scripts">here</a></li>
+                </ul>
+            </div>
             <br>
-            <p class="lead">Nerf Weapon Randomizer</p>
-            <ul>
-                <li class="text">Built a console application with versions in both C++ and Python</li>
-                <li class="text">The application provides the user with a list of random Nerf weapons that are pre-defined for a user-provided number of players</li>
-                <li class="text">Features include different random weapons every time, as well as support for varying numbers of players</li>
-                <li class="text">Check out the application <a href="https://github.com/mmmoussa/Nerf-Randomizer">here</a></li>
-            </ul>
+            <div class="projectGroup">
+                <p class="lead">Math Tester</p>
+                <ul>
+                    <li class="text">Built a math quiz console application using C++</li>
+                    <li class="text">The quiz keeps track of progress during a session</li>
+                    <li class="text">Features include different difficulty levels as well as quizzes for addition, subtraction, multiplication, and division</li>
+                    <li class="text">Check out the application <a href="https://github.com/mmmoussa/Math-Tester">here</a></li>
+                </ul>
+            </div>
+            <br>
+            <div class="projectGroup">
+                <p class="lead">Nerf Weapon Randomizer</p>
+                <ul>
+                    <li class="text">Built a console application with versions in both C++ and Python</li>
+                    <li class="text">The application provides the user with a list of random Nerf weapons that are pre-defined for a user-provided number of players</li>
+                    <li class="text">Features include different random weapons every time, as well as support for varying numbers of players</li>
+                    <li class="text">Check out the application <a href="https://github.com/mmmoussa/Nerf-Randomizer">here</a></li>
+                </ul>
+            </div>
         </div>
 
         <footer class="footer">
