--- a/skills.html
+++ b/skills.html
@@ -48,33 +48,45 @@
 
         <!-- Begin page content -->
         <div class="container">
-            <div class="page-header page-header-border">
-                <h1>My skills</h1>
+            <div class="page-header page-header-border titleContainer">
+                <h1 class="pageTitle">My skills</h1> 
             </div>
             <div class="row center">
-                <div class="col-md-4">
-                    <p class="lead">Web development</p>
-                        <div class="text">HTML</div>
-                        <div class="text">CSS</div>
-                        <div class="text">Javascript</div>
-                        <div class="text">Bootstrap</div>
-                        <br><br><br>
+                <div class="col-sm-6 col-md-3">
+                    <div class="Group">
+                        <p class="lead">Web development</p>
+                            <div class="text">HTML</div>
+                            <div class="text">CSS</div>
+                            <div class="text">Javascript</div>
+                            <div class="text">Bootstrap</div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <p class="lead">Scripting and Console</p>
-                        <div class="text">C++</div>
-                        <div class="text">Python</div>
-                        <div class="text">Lua</div>
-                        <br><br><br>
+                <div class="col-sm-6 col-md-3">
+                    <div class="Group">
+                        <p class="lead">Mobile development</p>
+                            <div class="text">Swift</div>
+                            <div class="text">Xcode</div>
+                            <br class="text"><br class="text">
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <p class="lead">Design</p>
-                        <div class="text">SolidWorks</div>
-                        <div class="text">Photoshop</div>
-                        <br><br><br>
+                <div class="col-sm-6 col-md-3">
+                    <div class="Group">
+                        <p class="lead">Other development</p>
+                            <div class="text">C++</div>
+                            <div class="text">Python</div>
+                            <div class="text">Lua</div>
+                            <br class="text">
+                    </div>
                 </div>
-            </div>
-            
+                <div class="col-sm-6 col-md-3">
+                    <div class="Group">
+                        <p class="lead">Design</p>
+                            <div class="text">SolidWorks</div>
+                            <div class="text">Photoshop</div>
+                            <br class="text"><br class="text">
+                    </div>
+                </div>
+            </div>      
         </div>
 
         <footer class="footer">
