Changed Myo Runaway link

--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,7 @@
                     <li class="text">My team built a Waterloo-themed version of Temple Run for PC using JavaScript</li>
                     <li class="text">Integrated the Myo armband with the game using a Lua script for full non-contact gameplay</li>
                     <li class="text">Won second place</li>
-                    <li class="text">Check out the game <a href="http://www.jhudson.ca/enghack_1/">here</a> (wait a minute for the game to load past the Windows screen of death)</li>
+                    <li class="text">Check out the game <a href="http://jhudson.ca/myorunaway/">here</a></li>
                     <li class="text">Check out the Myo scripts <a href="https://github.com/mmmoussa/Lua-scripts">here</a></li>
                 </ul>
             </div>
