--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <div class="aboutGroup">
                 <div class="row">
                     <div class="col-md-9">
-                        <p class="lead">Mohamed Moussa, 1A Systems Design Engineering Student</p>
+                        <p class="lead">Mohamed Moussa, 1B Systems Design Engineering Student</p>
                         <div class="text">I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
                             myself to self-improvement and am constantly looking for new and challenging problems. My passions are technology and software 
                             development, and I am frequently learning new languages or working on side projects. I also make sure to make time for athletics 
                             and having fun. Until recently, I was a national-level springboard and platform diver, twice placing among the top 12 in the 
-                            national finals. When not in class or studying I can often be found participating in hackathons and business events. <br><br>
+                            national finals. When not in class or studying I can often be found participating in hackathons and business events.<br><br>
                             To learn more about me, check out my <a href="Resume.pdf">resume</a>.
                         </div>
                     </div>
@@ -73,7 +73,7 @@
 
         <footer class="footer">
             <div class="container">
-                <p class="text-muted footer-text">&copy 2014</p>
+                <p class="text-muted footer-text">&copy 2015</p>
             </div>
         </footer>
 
