Added projects and associated images

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,27 @@
                 <h1 class="pageTitle">My projects</h1>
             </div>
             <div class="projectGroup">
-                <p class="lead">Terminal TicTacToe</p>
+                <p class="lead">2015: Sisi game</p>
+                <ul>
+                    <li class="text">I built a battle game where you, as the player, battle instances of Egypt's leader Abdel Fattah el-Sisi</li>
+                    <li class="text">The game follows the style of a pokemon battle to some extent</li>
+                    <li class="text">Both the player and Sisi have different moves they can use, and each has associated probabilities</li>
+                    <li class="text">The game, while having some substance and accuracy, is highly satirical!</li>
+                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/Sisi-game">here</a></li>
+                </ul>
+            </div>
+            <br>
+            <div class="projectGroup">
+                <p class="lead">2015: Egypt Simulator</p>
+                <ul>
+                    <li class="text">I built a very limited simulator of Egypt to mock the current political situation</li>
+                    <li class="text">The simulator, while having some substance and accuracy, is highly satirical!</li>
+                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/Egypt-simulator">here</a></li>
+                </ul>
+            </div>
+            <br>
+            <div class="projectGroup">
+                <p class="lead">2014: Terminal TicTacToe</p>
                 <ul>
                     <li class="text">I built the game TicTacToe to be played in the terminal</li>
                     <li class="text">The game can be played against a friend or a computer</li>
@@ -64,7 +84,21 @@
             </div>
             <br>
             <div class="projectGroup">
-                <p class="lead">24 Hour Startup 2014</p>
+                <p class="lead">2014: Nerf Firestrike SolidWorks Assembly</p>
+                <ul>
+                    <li class="text">I made most of the parts of the Firestrike using SolidWorks</li>
+                    <li class="text">I took the parts and assembled them together using SolidWorks</li>
+                    <li class="text">This project was completed as part of the SYDE 101L Graphics Lab course</li>
+                </ul>
+                <div class="row">
+                    <div class="col-md-4"><img src="Firestrike1.JPG" alt="Firestrike image 1" class="nerf-pic"></div>
+                    <div class="col-md-4"><img src="Firestrike3.JPG" alt="Firestrike image 2" class="nerf-pic"></div>
+                    <div class="col-md-4"><img src="Firestrike2.JPG" alt="Firestrike image 3" class="nerf-pic"></div>
+                </div>
+            </div>
+            <br>
+            <div class="projectGroup">
+                <p class="lead">2014: 24 Hour Startup</p>
                 <div class="row">
                     <div class="col-md-10">
                         <ul>
@@ -82,7 +116,7 @@
             </div>
             <br>
             <div class="projectGroup">
-                <p class="lead">Waterloo EngHack Fall 2014</p>
+                <p class="lead">2014: Waterloo EngHack Fall 2014</p>
                 <ul>
                     <li class="text">My team built a Waterloo-themed version of Temple Run for PC using JavaScript</li>
                     <li class="text">Integrated the Myo armband with the game using a Lua script for full non-contact gameplay</li>
@@ -93,22 +127,22 @@
             </div>
             <br>
             <div class="projectGroup">
-                <p class="lead">Math Tester</p>
+                <p class="lead">2014: Math Tester</p>
                 <ul>
                     <li class="text">Built a math quiz console application using C++</li>
                     <li class="text">The quiz keeps track of progress during a session</li>
                     <li class="text">Features include different difficulty levels as well as quizzes for addition, subtraction, multiplication, and division</li>
-                    <li class="text">Check out the application <a href="https://github.com/mmmoussa/Math-Tester">here</a></li>
+                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/Math-Tester">here</a></li>
                 </ul>
             </div>
             <br>
             <div class="projectGroup">
-                <p class="lead">Nerf Weapon Randomizer</p>
+                <p class="lead">2014: Nerf Weapon Randomizer</p>
                 <ul>
                     <li class="text">Built a console application with versions in both C++ and Python</li>
                     <li class="text">The application provides the user with a list of random Nerf weapons that are pre-defined for a user-provided number of players</li>
                     <li class="text">Features include different random weapons every time, as well as support for varying numbers of players</li>
-                    <li class="text">Check out the application <a href="https://github.com/mmmoussa/Nerf-Randomizer">here</a></li>
+                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/Nerf-Randomizer">here</a></li>
                 </ul>
             </div>
         </div>
