Updated Sisi fighter description and link
Updated description and added Windows version of game

--- a/projects.html
+++ b/projects.html
@@ -52,13 +52,16 @@
                 <h1 class="pageTitle">My projects</h1>
             </div>
             <div class="projectGroup">
-                <p class="lead">2015: Sisi game</p>
+                <p class="lead">2015: Sisi Fighter</p>
                 <ul>
                     <li class="text">I built a battle game where you, as the player, battle instances of Egypt's leader Abdel Fattah el-Sisi</li>
-                    <li class="text">The game follows the style of a pokemon battle to some extent</li>
+                    <li class="text">The game follows the style of a pokemon battle to some extent, but with the battle ongoing for 10 incarnations of Sisi</li>
                     <li class="text">Both the player and Sisi have different moves they can use, and each has associated probabilities</li>
                     <li class="text">The game, while having some substance and accuracy, is highly satirical!</li>
+                    <li class="text">This game is made using python, with use of tkinter for the GUI</li>
                     <li class="text">Check out the code <a href="https://github.com/mmmoussa/Sisi-game">here</a></li>
+                    <li class="text">Download the game for Windows <a href="Sisi_fighter.exe">here</a></li>
+                    <li class="text">Mac version coming soon!</li>
                 </ul>
             </div>
             <br>
