Added Sisi Fighter Mac app and removed Windows
Windows version of Sisi Fighter removed because it’s not working
properly

--- a/projects.html
+++ b/projects.html
@@ -60,8 +60,8 @@
                     <li class="text">The game, while having some substance and accuracy, is highly satirical!</li>
                     <li class="text">This game is made using python, with use of tkinter for the GUI</li>
                     <li class="text">Check out the code <a href="https://github.com/mmmoussa/Sisi-game">here</a></li>
-                    <li class="text">Download the game for Windows <a href="Sisi_fighter.exe">here</a></li>
-                    <li class="text">Mac version coming soon!</li>
+                    <li class="text">Download the game for Mac <a href="Sisi Fighter.app">here</a></li>
+                    <li class="text">Windows version coming soon!</li>
                 </ul>
             </div>
             <br>
