Added Sisi Fighter for Windows

--- a/projects.html
+++ b/projects.html
@@ -61,6 +61,7 @@
                     <li class="text">This game is made using python, with use of tkinter for the GUI</li>
                     <li class="text">Check out the code <a href="https://github.com/mmmoussa/Sisi-game">here</a></li>
                     <li class="text">Download the game for Mac <a href="Sisi Fighter.zip">here</a></li>
+                    <li class="text">Download the game for Windows <a href="Sisi Fighter Windows.zip">here</a></li>
                     <li class="text">Windows version coming soon!</li>
                 </ul>
             </div>
