--- a/projects.html
+++ b/projects.html
@@ -58,11 +58,10 @@
                     <li class="text">The game follows the style of a pokemon battle to some extent, but with the battle ongoing for 10 incarnations of Sisi</li>
                     <li class="text">Both the player and Sisi have different moves they can use, and each has associated probabilities</li>
                     <li class="text">The game, while having some substance and accuracy, is highly satirical!</li>
-                    <li class="text">This game is made using python, with use of tkinter for the GUI</li>
+                    <li class="text">This game is made using python, with use of Tkinter for the GUI</li>
                     <li class="text">Check out the code <a href="https://github.com/mmmoussa/Sisi-game">here</a></li>
                     <li class="text">Download the game for Mac <a href="Sisi Fighter.zip">here</a></li>
                     <li class="text">Download the game for Windows <a href="Sisi Fighter Windows.zip">here</a></li>
-                    <li class="text">Windows version coming soon!</li>
                 </ul>
             </div>
             <br>
