--- a/Smiley_No_More_v0.1.html
+++ b/Smiley_No_More_v0.1.html
@@ -116,7 +116,7 @@
 		</style>
 	</head>
 	<body>
-		<p class="header"><span>Unity Web Player | </span>Goose Fighter</p>
+		<p class="header"><span>Unity Web Player | </span>Smiley No More</p>
 		<div class="content">
 			<div id="unityPlayer">
 				<div class="missing">
