Update control instructions for Smiley No More

--- a/Smiley_No_More_v0.1.html
+++ b/Smiley_No_More_v0.1.html
@@ -132,5 +132,6 @@
 			</div>
 		</div>
 		<p class="footer">&laquo; Created by Mohamed Moussa with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
+		<p class="footer">Controls: WASD or UP/LEFT/DOWN/RIGHT to move, SHIFT to run, E or Left Click to shoot, move mouse to aim</p>
 	</body>
 </html>
