Updated Smiley No More game files

--- a/Smiley_No_More.html
+++ b/Smiley_No_More.html
@@ -56,7 +56,7 @@
 						break;
 					}
 				});
-				u.initPlugin(jQuery("#unityPlayer")[0], "Smiley_No_More_v0.2.unity3d");
+				u.initPlugin(jQuery("#unityPlayer")[0], "Smiley_No_More.unity3d");
 			});
 		-->
 		</script>
