--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,10 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a class="navbar-text" href="index.html">About</a></li>
-                        <li><a class="navbar-text" href="skills.html">Skills</a></li>
-                        <li><a class="navbar-text" href="projects.html">Projects</a></li>
-                        <li class="active"><a class="navbar-text" href="contact.html">Contact</a></li>
+                        <li><a class="navbar-text" href="index">About</a></li>
+                        <li><a class="navbar-text" href="skills">Skills</a></li>
+                        <li><a class="navbar-text" href="projects">Projects</a></li>
+                        <li class="active"><a class="navbar-text" href="contact">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
