--- a/skills.html
+++ b/skills.html
@@ -54,36 +54,38 @@
             <div class="row center">
                 <div class="col-sm-6 col-md-3">
                     <div class="Group">
-                        <p class="lead">Web development</p>
+                        <p class="lead">My proficient programming languages</p>
                             <div class="text">HTML</div>
                             <div class="text">CSS</div>
-                            <div class="text">Javascript</div>
-                            <div class="text">Bootstrap</div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="Group">
-                        <p class="lead">Mobile development</p>
-                            <div class="text">Swift</div>
-                            <div class="text">Xcode</div>
-                            <br class="text"><br class="text">
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="Group">
-                        <p class="lead">Other development</p>
-                            <div class="text">C++</div>
                             <div class="text">Python</div>
-                            <div class="text">Lua</div>
-                            <br class="text">
+                            <div class="text">C++</div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3">
                     <div class="Group">
-                        <p class="lead">Design</p>
+                        <p class="lead">Other programming languages</p>
+                            <div class="text">Javascript</div>
+                            <div class="text">C#</div>
+                            <div class="text">Swift</div>
+                            <div class="text">Lua</div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="Group">
+                        <p class="lead">Tools</p>
+                            <div class="text">Xcode</div>
+                            <div class="text">Unity</div>
+                            <div class="text">GitHub</div>
                             <div class="text">SolidWorks</div>
-                            <div class="text">Photoshop</div>
-                            <br class="text"><br class="text">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="Group">
+                        <p class="lead">Frameworks</p>
+                            <div class="text">Bootstrap</div>
+                            <div class="text">Tkinter</div>
+                            <div class="text">Django</div>
+                            <div class="text"></div>
                     </div>
                 </div>
             </div>      
