--- a/skills.html
+++ b/skills.html
@@ -54,19 +54,19 @@
             <div class="row center">
                 <div class="col-sm-6 col-md-3">
                     <div class="Group">
-                        <p class="lead">My proficient programming languages</p>
+                        <p class="lead">Languages</p>
                             <div class="text">HTML</div>
                             <div class="text">CSS</div>
-                            <div class="text">Python</div>
-                            <div class="text">C++</div>
+                            <div class="text">Javascript</div>
+                            <div class="text">Swift</div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3">
                     <div class="Group">
-                        <p class="lead">Other programming languages</p>
-                            <div class="text">Javascript</div>
+                        <p class="lead">Languages</p>
+                            <div class="text">C++</div>
                             <div class="text">C#</div>
-                            <div class="text">Swift</div>
+                            <div class="text">Python</div>
                             <div class="text">Lua</div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                             <div class="text">Bootstrap</div>
                             <div class="text">Tkinter</div>
                             <div class="text">Django</div>
-                            <div class="text"></div>
+                            <br class="text">
                     </div>
                 </div>
             </div>      
