--- a/skills.html
+++ b/skills.html
@@ -52,22 +52,23 @@
                 <h1 class="pageTitle">My skills</h1> 
             </div>
             <div class="row center">
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-12 col-md-6">
                     <div class="Group">
-                        <p class="lead">Languages</p>
-                            <div class="text">HTML</div>
-                            <div class="text">CSS</div>
-                            <div class="text">Javascript</div>
-                            <div class="text">Swift</div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="Group">
-                        <p class="lead">Languages</p>
-                            <div class="text">C++</div>
-                            <div class="text">C#</div>
-                            <div class="text">Python</div>
-                            <div class="text">Lua</div>
+                        <p class="lead">Programming Languages</p>
+                        <div class="row center">
+                            <div class="col-sm-6 col-md-3">
+                                <div class="text">HTML</div>
+                                <div class="text">CSS</div>
+                                <div class="text">Javascript</div>
+                                <div class="text">Swift</div>
+                            </div>
+                            <div class="col-sm-6 col-md-3">
+                                <div class="text">C++</div>
+                                <div class="text">C#</div>
+                                <div class="text">Python</div>
+                                <div class="text">Lua</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3">
