--- a/skills.html
+++ b/skills.html
@@ -66,16 +66,20 @@
                         <p class="lead">Programming Languages</p>
                         <div class="row center">
                             <div class="col-sm-6 col-md-3">
-                                <div class="text">HTML</div>
-                                <div class="text">CSS</div>
-                                <div class="text">Javascript</div>
-                                <div class="text">Swift</div>
+                                <div class="Group">
+                                    <div class="text">HTML</div>
+                                    <div class="text">CSS</div>
+                                    <div class="text">Javascript</div>
+                                    <div class="text">Swift</div>
+                                </div>
                             </div>
                             <div class="col-sm-6 col-md-3">
-                                <div class="text">C++</div>
-                                <div class="text">C#</div>
-                                <div class="text">Python</div>
-                                <div class="text">Lua</div>
+                                <div class="Group">
+                                    <div class="text">C++</div>
+                                    <div class="text">C#</div>
+                                    <div class="text">Python</div>
+                                    <div class="text">Lua</div>
+                                </div>
                             </div>
                         </div>
                     </div>
