--- a/skills.html
+++ b/skills.html
@@ -65,13 +65,13 @@
                     <div class="Group">
                         <p class="lead">Programming Languages</p>
                         <div class="row center">
-                            <div class="col-sm-6 col-md-3" width=50%>
+                            <div class="col-sm-6">
                                 <div class="text">HTML</div>
                                 <div class="text">CSS</div>
                                 <div class="text">Javascript</div>
                                 <div class="text">Swift</div>
                             </div>
-                            <div class="col-sm-6 col-md-3" width=50%>
+                            <div class="col-sm-6">
                                 <div class="text">C++</div>
                                 <div class="text">C#</div>
                                 <div class="text">Python</div>
