--- a/projects.html
+++ b/projects.html
@@ -54,10 +54,9 @@
             <div class="projectGroup">
                 <p class="lead">2015: Smiley No More</p>
                 <ul>
-                    <li class="text">FPS game where you try to survive as long as possible and get as high a score as possible</li>
-                    <li class="text">Game is 3D and includes animation</li>
-                    <li class="text">Both the player and Sisi have different moves they can use, and each has associated probabilities</li>
-                    <li class="text">The game, while having some substance and accuracy, is highly satirical!</li>
+                    <li class="text">A FPS game where you try to survive as long as possible and get as high a score as possible</li>
+                    <li class="text">The game is 3D and includes animation</li>
+                    <li class="text">Game is functioning but not yet completed</li>
                     <li class="text">This game is made using JavaScript and C#, along with the Unity game engine</li>
                     <li class="text">Play the game <a href="Smiley_No_More">here</a></li>
                 </ul>
