--- a/projects.html
+++ b/projects.html
@@ -162,7 +162,7 @@
 
         <footer class="footer">
             <div class="container">
-                <p class="text-muted footer-text">&copy 2015</p>
+                <p class="text-muted footer-text">&copy 2015 | Mohamed Moussa</p>
             </div>
         </footer>
 
